--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
-    "stimulus": "^1.1.1",
+    "stimulus": "2.0",
     "tailwindcss": "^1.9.6",
     "turbolinks": "^5.2.0"
   },
